fix(dev-server, ActiveCallItem): fix router and overflow
when hangup calls and there are still available active calls , goto call ctrl

--- a/packages/ringcentral-widgets/components/ActiveCallItemV2/styles.scss
+++ b/packages/ringcentral-widgets/components/ActiveCallItemV2/styles.scss
@@ -96,3 +96,8 @@ $padding-horizontal:20px;
 .pointer {
   cursor: pointer;
 }
+
+.content {
+  max-width: calc(100% - 120px);
+  overflow: visible;
+}
